ISPN-13905 Baseline to JDK 11